fix: ResourceCenter returns URLConnection, link ResourceCenter and FileRegister